feat: add articles docs
