# internal/handler/rest/article.go
@@ -8,6 +8,15 @@ import (
 	"github.com/google/uuid"
 )
 
+// @summary Get an article by id
+// @tags Article
+// @produce json
+// @param id path string true "Article id"
+// @router /articles/{id} [get]
+// @success 200 {object} dto.HttpSuccess
+// @failure 400 {object} dto.HttpError "Validation error"
+// @failure 404 {object} dto.HttpError "Article not found"
+// @failure 500 {object} dto.HttpError "Internal Server error"
 func (h *Handler) GetArticle(ctx *fiber.Ctx) error {
 	articleId, err := uuid.Parse(ctx.Params("id"))
 	if err != nil {
@@ -22,6 +31,16 @@ func (h *Handler) GetArticle(ctx *fiber.Ctx) error {
 	return response.HttpSuccess(ctx, "success", article)
 }
 
+// @summary Create an article
+// @tags Article
+// @accept json
+// @produce json
+// @param id body dto.CreateArticle true "Crete article"
+// @router /articles [post]
+// @success 200 {object} dto.HttpSuccess
+// @failure 400 {object} dto.HttpError "Validation error"
+// @failure 401 {object} dto.HttpError "Unaouthorized"
+// @failure 500 {object} dto.HttpError "Internal Server error"
 func (h *Handler) CreateArticle(ctx *fiber.Ctx) error {
 	var create dto.CreateArticle
 	if err := ctx.BodyParser(&create); err != nil {
@@ -45,6 +64,17 @@ func (h *Handler) CreateArticle(ctx *fiber.Ctx) error {
 	return response.HttpSuccess(ctx, "success", articleId)
 }
 
+// @summary Get an article by search param
+// @tags Article
+// @produce json
+// @param page 	  query int true     "Page number"
+// @param size 	  query int true     "Page size"
+// @param keyword query string false "Search Keyword"
+// @router /articles [get]
+// @success 200 {object} dto.HttpSuccess
+// @failure 400 {object} dto.HttpError "Validation error"
+// @failure 404 {object} dto.HttpError "Article not found"
+// @failure 500 {object} dto.HttpError "Internal Server error"
 func (h *Handler) SearchArticles(ctx *fiber.Ctx) error {
 	page := ctx.QueryInt("page", 1)
 	pageSize := ctx.QueryInt("size", 9)
@@ -58,6 +88,15 @@ func (h *Handler) SearchArticles(ctx *fiber.Ctx) error {
 	return response.HttpSuccess(ctx, "success", articles)
 }
 
+// @summary Get an article written by the user
+// @tags Article
+// @produce json
+// @router /articles/users [get]
+// @success 200 {object} dto.HttpSuccess
+// @failure 400 {object} dto.HttpError "Validation error"
+// @failure 401 {object} dto.HttpError "Unaouthorized"
+// @failure 404 {object} dto.HttpError "Article not found"
+// @failure 500 {object} dto.HttpError "Internal Server error"
 func (h *Handler) GetUserArticles(ctx *fiber.Ctx) error {
 	userId, ok := ctx.Locals("userId").(uuid.UUID)
 	if !ok {
@@ -75,6 +114,16 @@ func (h *Handler) GetUserArticles(ctx *fiber.Ctx) error {
 	return response.HttpSuccess(ctx, "success", articles)
 }
 
+// @summary Delete an article by id
+// @tags Article
+// @produce json
+// @param id path string true "Article id"
+// @router /articles/{id} [delete]
+// @success 200 {object} dto.HttpSuccess
+// @failure 400 {object} dto.HttpError "Validation error"
+// @failure 401 {object} dto.HttpError "Unaouthorized"
+// @failure 404 {object} dto.HttpError "Article not found"
+// @failure 500 {object} dto.HttpError "Internal Server error"
 func (h *Handler) DeleteArticle(ctx *fiber.Ctx) error {
 	userId, ok := ctx.Locals("userId").(uuid.UUID)
 	if !ok {
@@ -94,6 +143,16 @@ func (h *Handler) DeleteArticle(ctx *fiber.Ctx) error {
 	return response.HttpSuccess(ctx, "success", nil)
 }
 
+// @summary Edit an article
+// @tags Article
+// @produce json
+// @param editArtilce body dto.EditArticle true "Edit article request body"
+// @router /articles [patch]
+// @success 200 {object} dto.HttpSuccess
+// @failure 400 {object} dto.HttpError "Validation error"
+// @failure 401 {object} dto.HttpError "Unaouthorized"
+// @failure 404 {object} dto.HttpError "Article not found"
+// @failure 500 {object} dto.HttpError "Internal Server error"
 func (h *Handler) EditArticle(ctx *fiber.Ctx) error {
 	userId, ok := ctx.Locals("userId").(uuid.UUID)
 	if !ok {
